Refactor build scripts and documentation for consistency
- Unified Docker build and push scripts, reducing redundancy.
- Updated deployment script to use a single app service name for both backend and frontend.
- Removed obsolete PowerShell snippets from markdown files for cross-platform compatibility.
- Improved task handling in backend by leveraging `TaskService` and enhancing unit tests.
- Refined webpack configurations and ESLint rules for better project maintenance.
- Enhanced documentation with platform-specific instructions and corrected Markdown code block usage.